--- a/time-entry-api/conf/application.conf
+++ b/time-entry-api/conf/application.conf
@@ -8,9 +8,9 @@ akka-contrib-mongodb-persistence-journal {
     upcasting = "model.eventadapters.MigrationEventAdapter"
   }
   event-adapter-bindings {
-    "model.events.TimeEntryCreated" = upcasting
-    "model.events.TimeEntryApproved" = upcasting
-    "model.events.TimeEntryDeclined" = upcasting
+    "showcase.events.TimeEntryCreated" = upcasting
+    "showcase.events.TimeEntryApproved" = upcasting
+    "showcase.events.TimeEntryDeclined" = upcasting
     "reactivemongo.bson.BSONDocument" = upcasting
   }
 }
