--- a/email-service/src/main/resources/application.conf
+++ b/email-service/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 sqs {
-  endpoint = ""
-  queueUrl = ""
+  endpoint = "https://sqs.eu-central-1.amazonaws.com"
+  queueUrl = "https://sqs.eu-central-1.amazonaws.com/929580149227/aws-akka-showcase-email-service"
   accessKey = ""
   secretKey = ""
 }
