finish timeentry-api

--- a/email-service/src/main/resources/reference.conf
+++ b/email-service/src/main/resources/reference.conf
@@ -1,6 +1,6 @@
 sqs {
-  endpoint = "https://sqs.eu-central-1.amazonaws.com"
-  queueUrl = "https://sqs.eu-central-1.amazonaws.com/929580149227/aws-akka-showcase-email-service"
+  endpoint = ""
+  queueUrl = ""
   accessKey = ""
   secretKey = ""
 }
